--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,7 @@ $portfolio-bacground-color: rgba(33, 150, 243, 0.9);
 
 $font-main: Roboto, sans-serif;
 $logo-font: Raleway, sans-serif;
+
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
