--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ ul {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
-  background-color: pink;
 }
 
 @media screen and (min-width: 480px) {
@@ -35,7 +34,7 @@ ul {
 }
 
 .features-list {
-  margin-top: 0px;
+  margin: -15px;
 }
 
 @media screen and (min-width: 768px) {
@@ -49,18 +48,21 @@ ul {
 }
 
 .feachers-item {
-  width: 100%;
+  width: calc(100% - 2 * 15px);
+  margin: 15px;
 }
 
 @media screen and (min-width: 768px) {
   .feachers-item {
-    width: 50%;
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .feachers-item {
-    width: 25%;
+    width: calc((100% - 8 * 15px) / 4);
+    margin: 15px;
   }
 }
 
@@ -112,17 +114,13 @@ ul {
 }
 
 .feachers-item .features-text {
-  margin-top: 0px;
+  margin: 0px;
   color: #757575;
   font-family: Roboto, sans-serif;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-}
-
-.feachers-item .features-text:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .portfolio-buttons-list {
