--- a/sass/components-index/_features-section.scss
+++ b/sass/components-index/_features-section.scss
@@ -7,8 +7,6 @@
   margin-right: auto;
   margin-bottom: 60px;
 
-  background-color: pink;
-
   @media screen and (min-width: $mobile) {
     // For tablet devices
     width: 480px;
@@ -26,7 +24,7 @@
 }
 
 .features-list {
-  margin-top: 0px;
+  margin: -15px;
 
   @media screen and (min-width: $tablet) {
     display: flex;
@@ -35,7 +33,8 @@
 }
 
 .feachers-item {
-  width: 100%;
+  width: calc(100% - 2 * 15px);
+  margin: 15px;
 
   @media screen and (min-width: $mobile) {
     // For tablet devices
@@ -43,12 +42,14 @@
 
   @media screen and (min-width: $tablet) {
     // For small desktop devices
-    width: 50%;
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
   }
 
   @media screen and (min-width: $desktop) {
     // For large desktop devices
-    width: 25%;
+    width: calc((100% - 8 * 15px) / 4);
+    margin: 15px;
   }
 
   .feachers-icon-container {
@@ -97,7 +98,7 @@
   }
 
   .features-text {
-    margin-top: 0px;
+    margin: 0px;
 
     color: $primary-text-color;
     font-family: $font-main;
@@ -106,8 +107,5 @@
     line-height: 24px;
     letter-spacing: 0.03em;
 
-    &:not(:last-child) {
-      margin-bottom: 30px;
-    }
   }
 }
