--- a/css/main.css
+++ b/css/main.css
@@ -123,226 +123,84 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.portfolio-buttons-list {
+.doings-container {
   width: 1200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 94px;
-  margin-bottom: 50px;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  display: flex;
-}
-
-.portfolio-buttons-list .portfolio-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 8px;
-  padding: 6px 22px;
-  cursor: pointer;
-  border-radius: 4px;
-  border: 1px;
-  border-color: transparent;
-  color: #212121;
-  background-color: #f5f4fa;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  letter-spacing: 0.03em;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-buttons-list .portfolio-button:hover, .portfolio-buttons-list .portfolio-button:focus {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: #ffffff;
-  background-color: #2196f3;
-}
-
-.portfolio-card-container {
-  width: 1200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-top: 0px;
   margin-bottom: 94px;
 }
 
-.portfolio-card-list {
+@media screen and (max-width: 1199px) {
+  .doings-container {
+    display: none;
+  }
+}
+
+.doings-container .doings-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  margin: -15px;
 }
 
-.portfolio-card-list .portfolio-card {
-  max-width: 370px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 1px solid #eeeeee;
-  background-color: white;
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
-.portfolio-card-list .portfolio-card:hover {
-  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio-card-list .portfolio-card:nth-child(3n + 1) {
-  margin-left: 0px;
-}
-
-.portfolio-card-list .portfolio-card:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-
-.card-image-container {
+.doings-card {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .doings-card {
+    width: calc((100% - 6 * 15px) / 3);
+    margin: 15px;
+  }
+}
+
+.doings-card .doings-image {
   margin: 0px;
 }
 
-.card-image-container .card-image {
-  width: 370px;
-  height: 294px;
-  margin: 0px;
-}
-
-.card-image-container:hover .portfolio-text-overlay {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.card-image-container .portfolio-text-overlay {
+.doings-card .doings-text {
   position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  /* сдвигает текст с фоном вниз фото на 100% */
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.card-image-container .portfolio-text-overlay .portfolio-card-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  padding-left: 24px;
-  padding-right: 24px;
+  margin: 0px;
   /* 
-      padding-top: 63px;
-      padding-bottom: 63px;
-      */
-  background-color: rgba(33, 150, 243, 0.9);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-}
-
-.card-titles-container {
-  display: block;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-}
-
-.card-titles-container .portfolio-title {
-  margin-top: 0px;
-  margin-bottom: 4px;
-  color: #212121;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
+    если убрать фиксированную высоту, тогда:
+    padding-top: 27px; 
+    padding-bottom: 27px;
+    */
+  background-color: rgba(47, 48, 58, 0.8);
+  color: white;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-}
-
-.card-titles-container .portfolio-subtitle {
-  margin: 0px;
-  color: #757575;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
-
-/*
-  visibility: hidden;
-*/
 /*# sourceMappingURL=main.css.map */
