--- a/css/main.css
+++ b/css/main.css
@@ -203,4 +203,69 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
+.team-container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 480px) {
+  .team-container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-container {
+    width: 1200px;
+  }
+}
+
+.team-list {
+  margin: -15px;
+}
+
+.emploee-card {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  width: calc(100% - 2 * 15px);
+  margin: 15px;
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.emploee-card:hover, .emploee-card:focus {
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.17), 0px 1px 3px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.17), 0px 1px 3px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 768px) {
+  .emploee-card {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .emploee-card {
+    width: calc((100% - 8 * 15px) / 4);
+    margin: 15px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
