--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,53 @@ ul {
   margin: 0px;
 }
 
+a {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+  text-decoration: none;
+}
+
+address {
+  font-style: normal;
+}
+
+.header {
+  position: relative;
+}
+
+.header-container {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .header-container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    width: 768px;
+    height: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-container {
+    width: 1200px;
+  }
+}
+
 .mobile-menu-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -29,20 +76,150 @@ ul {
   display: none;
 }
 
-.header {
-  position: relative;
+@media screen and (min-width: 768px) {
+  .mobile-menu-button {
+    display: none;
+  }
 }
 
 .nav-address-container {
-  background-color: pink;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
+  height: 453px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #fff;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+  border-top: 1px solid #ececec;
 }
 
-.nav-address-container.is-open {
+@media screen and (max-width: 767px) {
+  .nav-address-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+  .nav-address-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-address-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+.site-nav-link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-bottom: 40px;
+  color: #212121;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-link {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-bottom: 0px;
+  }
+}
+
+.site-nav-link:active {
+  position: relative;
+  color: #2196f3;
+}
+
+.site-nav-link:active::after {
+  content: '';
+  position: absolute;
+  left: 0;
   display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
+  -webkit-animation-name: current-underline;
+          animation-name: current-underline;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav-link:active::after {
+    top: 25px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav-link:active::after {
+    bottom: 0;
+  }
+}
+
+@-webkit-keyframes current-underline {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes current-underline {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.header-address-link {
+  fill: #757575;
+  color: #757575;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+  font-size: 18px;
+  line-height: 21px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .header-address-link {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-address-link {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 
 .features-container {
