скачала и оптимизировала картинки, помучалась над мобильной версией

--- a/sass/components-index/_index-components.scss
+++ b/sass/components-index/_index-components.scss
@@ -1,5 +1,9 @@
 // Index.html Components
 
+@import "./hero-section";
 @import "./features-section";
 @import "./doings-section";
 @import "./team-section";
+@import "./customers-section";
+@import "./page-title";
+@import "./backdrop-popup";
