--- a/sass/components-index/_team-section.scss
+++ b/sass/components-index/_team-section.scss
@@ -1,3 +1,15 @@
+.team-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  background-color: $section-background-color;
+}
+
 .team-container {
   // For mobile devices
   padding-left: 15px;
@@ -6,6 +18,10 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
+
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
 
   @media screen and (min-width: $mobile) {
     // For tablet devices
@@ -25,16 +41,23 @@
 
 .team-list {
   margin: -15px;
-  
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .emploee-card {
+  display: block;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  
+
   width: calc(100% - 2 * 15px);
   margin: 15px;
+
+  font-family: $font-main;
+  text-align: center;
 
   background-color: $aditional-text-color;
   border-radius: 0px 0px 4px 4px;
@@ -60,4 +83,81 @@
     width: calc((100% - 8 * 15px) / 4);
     margin: 15px;
   }
+  
+  .emploee-image {
+    display: block;
+    max-width: 100%;
+    object-fit: cover;
+
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
+
+  .emploee-name {
+    margin-top: 0px;
+    margin-bottom: 10px;
+
+    color: $title-text-color;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .emploee-position {
+    margin-top: 0px;
+    margin-bottom: 16px;
+
+    color: $primary-text-color;
+    text-align: center;
+    font-weight: normal;
+  }
 }
+
+.emploee-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .emploee-social-item {
+    &:not(:first-child) {
+      margin-left: 10px;
+    }
+
+    .emploee-social-link {
+      width: 44px;
+      height: 44px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      margin-top: 0px;
+      margin-bottom: 24px;
+
+      color: $primary-text-color;
+      border-radius: 50%;
+
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        background-color: $accent-color;
+      }
+
+      &:hover svg,
+      &:focus svg {
+        fill: $aditional-text-color;
+      }
+    }
+
+    .emploee-social-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      background-color: transparent;
+      fill: $icon-color;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+}
+
