--- a/sass/components-index/_backdrop-popup.scss
+++ b/sass/components-index/_backdrop-popup.scss
@@ -1,3 +1,311 @@
 .backdrop {
-  padding: 40px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  /* ----вместо width: 100%; height: 100%; можно задать :----
+  bottom: 0px;
+  right: 0px;   */
+  width: 100%;
+  height: 100%;
+
+  padding: 20px;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-hidden {
+    opacity: 0;
+    pointer-events: none; /*при скрытом элементе пропускает все клики через|мимо себя*/
+
+    /* когда backdrop спрятан, модальное окно тоже спрятано: */
+    &.popup {
+      transform: translate(-50%, -50%) scale(0.9);
+    }
+  }
 }
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 100%;
+  max-width: 450px;
+
+  font-family: $font-main;
+
+  @media screen and (min-width: $tablet + 1px) {
+    max-width: 528px;
+  }
+
+  padding: 40px;
+
+  background-color: #fff;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.popup-close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  right: 8px;
+  top: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  padding: 0px;
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: white;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    outline: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+
+  &:hover svg,
+  &:focus svg {
+    fill: $accent-color;
+    transition: all 150ms linear;
+  }
+
+  .popup-close-icon {
+    position: absolute;
+    display: block;
+
+    width: 11px;
+    height: 11px;
+
+    fill: #212121;
+
+    transition: all 150ms linear;
+  }
+}
+
+/* 
+  background-image: url(../images/checkbox-close.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: inherit;
+*/
+
+.popup-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+
+  margin-bottom: 30px;
+
+  color: $title-text-color;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.popup-field {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 28px;
+
+  .popup-field-input {
+    position: relative;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 42px;
+    padding-right: 18px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    font: inherit;
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+      border-color: $accent-color;
+    }
+
+    /* 
+   выбрать label, который идёт сразу за input, когда у того не показывается placeholder:
+   (+ стоит, потому что выбираем label, который стоит после input) 
+   */
+    &:focus ~ .popup-field-label,
+    &:not(:placeholder-shown) ~ .popup-field-label {
+      transform: translateY(-40px) translateX(15px);
+      color: $accent-color;
+    }
+
+    &:focus ~ .popup-icon {
+      fill: $accent-color;
+    }
+  }
+
+  .popup-field-label {
+    position: absolute;
+
+    top: 50%;
+    left: 0px;
+
+    transform: translateY(-50%) translateX(40px);
+    transition: transform 250ms linear;
+    cursor: pointer;
+
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+    color: #757575;
+  }
+
+  .popup-icon {
+    position: absolute;
+    left: 19px;
+    /* top: 14px; */
+    top: 50%;
+    transform: translateY(-50%);
+
+    transition: transform 250ms linear;
+  }
+
+  .popup-field-textarea {
+    position: relative;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+    resize: none;
+
+    margin-bottom: 20px;
+    padding: 12px 16px;
+
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+
+    cursor: pointer;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    &:focus {
+      outline: none;
+      border-color: $accent-color;
+    }
+
+    &:focus ~ .textarea-field-label,
+    &:not(:placeholder-shown) ~ .textarea-field-label {
+      transform: translateY(-40px) translateX(15px);
+      color: $accent-color;
+    }
+  }
+
+  .textarea-field-label {
+    position: absolute;
+
+    top: 15%;
+    left: 0px;
+
+    transform: translateY(-50%) translateX(40px);
+    transition: transform 250ms linear;
+    cursor: pointer;
+
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+    color: #757575;
+  }
+}
+
+// Checkbox
+
+.accept-conditions {
+  width: 100%;
+  text-align: justify;
+  margin-bottom: 30px;
+
+  cursor: pointer;
+
+  .accept-conditions-checkbox {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.03em;
+    font-weight: normal;
+
+    @media screen and (min-width: $tablet + 1px) {
+      font-size: 14px;
+      line-height: 24px;
+    }
+
+    .accept-conditions-box {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+
+      position: absolute;
+
+      & ~ .accept-conditions-text:before {
+        content: '';
+        display: inline-block;
+
+        width: 16px;
+        height: 16px;
+
+        margin-right: 8px;
+
+        border: 2px solid #212121;
+        border-radius: 2px;
+
+        flex-shrink: 0;
+
+        transition: all 100ms linear;
+      }
+
+      &:checked ~ .accept-conditions-text:before {
+        background-color: $accent-color;
+        border-color: transparent;
+        background-image: url(../../images/checkbox-Vector.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: inherit;
+      }
+    }
+  }
+
+  .accept-conditions-text {
+    color: #757575;
+  }
+
+  .conditions-text {
+    color: $accent-color;
+    text-decoration: underline;
+  }
+}
+
+// Popup-send button
