--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -7,12 +7,16 @@
 //   font-family: $font-main;
 // }
 
- ul {
-   list-style: none;
-   text-decoration-line: none;
-   padding: 0px;
-   margin: 0px;
- }
+body.modal-open {
+  overflow: hidden;
+}
+
+ul {
+  list-style: none;
+  text-decoration-line: none;
+  padding: 0px;
+  margin: 0px;
+}
 
 a {
   text-decoration-line: none;
@@ -33,7 +37,7 @@ address {
 // }
 
 // p {
-  // margin: 0px;
+// margin: 0px;
 // }
 
 .visually-hidden {
