--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -175,6 +175,13 @@
       background-color: $section-background-color;
       border-color: $accent-color;
     }
+
+    @media screen and (min-width: $tablet) {
+      width: 450px;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 358px;
+    }
   }
   // Subscribe button
 }
