--- a/sass/common/_header.scss
+++ b/sass/common/_header.scss
@@ -5,13 +5,14 @@
 .header-container {
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   height: 60px;
 
-  padding: 15px;
-
   margin-left: auto;
   margin-right: auto;
+
+  padding: 15px;
 
   @media screen and (min-width: $mobile) {
     width: 480px;
@@ -21,11 +22,16 @@
     width: 768px;
     height: 80px;
 
-    display: inline-flex;
+    display: flex;
   }
 
   @media screen and (min-width: $desktop) {
     width: 1200px;
+  }
+
+  .logo-link {
+    display: flex;
+    margin-right: auto;
   }
 }
 
@@ -60,8 +66,8 @@
 }
 
 .nav-address-container {
-  padding-top: 60px;
-  padding-bottom: 45px;
+  align-items: center;
+  justify-content: center;
 
   background-color: #fff;
   text-align: center;
@@ -80,6 +86,9 @@
     left: 0;
     width: 100%;
 
+    padding-top: 60px;
+    padding-bottom: 45px;
+
     &.is-open {
       display: block;
     }
@@ -90,17 +99,28 @@
   @media screen and (min-width: $tablet) {
     display: flex;
 
-    margin-left: auto;
-
     font-size: 14px;
     line-height: 16px;
-
-    border-bottom: 1px solid #ececec;
   }
 }
 
 .site-nav-list {
   margin-bottom: 20px;
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    margin-bottom: 0px;
+    margin-right: 80px;
+
+    .site-nav-item + .site-nav-item {
+      margin-left: 50px;
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    margin-right: 305px;
+  }
 }
 
 .site-nav-link {
@@ -111,7 +131,7 @@
   color: $title-text-color;
 
   @media screen and (min-width: $tablet) {
-    display: inline-flex;
+    display: flex;
 
     margin-bottom: 0px;
   }
@@ -123,17 +143,8 @@
 
     &::after {
       content: '';
-
       position: absolute;
       left: 0;
-
-      @media screen and (max-width: $tablet - 1px) {
-        top: 25px;
-      }
-
-      @media screen and (min-width: $tablet) {
-        bottom: 0;
-      }
 
       display: block;
       width: 100%;
@@ -141,6 +152,16 @@
 
       background-color: $accent-color;
       border-radius: 2px;
+
+      @media screen and (max-width: $tablet - 1px) {
+        // не работает, как максимальная ширина, поэтому дальше переопределяю
+        top: 25px;
+      }
+
+      @media screen and (min-width: $tablet) {
+        top: 44px;
+        bottom: 0;
+      }
 
       animation-name: current-underline;
       animation-duration: 2s;
@@ -162,9 +183,22 @@
   }
 }
 
-.header-address-link {
-  display: inline-block;
+.header-address-list {
+  display: block;
+  
+  @media screen and (min-width: $tablet) {
+    margin-bottom: -10px;
+    text-align: left;
+  }
 
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    margin-right: -30px;
+  }
+}
+
+.header-address-link {
+  display: block;
   margin-bottom: 15px;
 
   fill: $primary-text-color;
@@ -174,16 +208,38 @@
   line-height: 21px;
   cursor: pointer;
 
-  @media screen and (min-width: $mobile) {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+    color: $accent-color;
   }
 
   @media screen and (min-width: $tablet) {
+    margin-bottom: 10px;
+
     font-size: 12px;
     line-height: 14px;
   }
 
   @media screen and (min-width: $desktop) {
+    margin-bottom: 0px;
+    margin-right: 30px;
+    
     font-size: 14px;
     line-height: 16px;
+  }
+
+  .header-address-icon {
+    margin-right: 10px;
+
+    @media screen and (min-width: $tablet) {
+      margin-right: 8px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      margin-right: 10px;
+    }
   }
 }
