--- a/sass/components-index/_team-section.scss
+++ b/sass/components-index/_team-section.scss
@@ -95,13 +95,13 @@
     margin-bottom: 30px;
 
     @media screen and (min-width: $tablet) {
-      width: 354px;
-      height: 260px;
+      // width: 354px;
+      // height: 260px;
     }
 
     @media screen and (min-width: $desktop) {
-      width: 270px;
-      height: 260px;
+      // width: 270px;
+      // height: 260px;
     }
   }
 
